add author to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/sasham00re/Sculpture.git"
   },
-  "author": "",
+  "author": "sasham00re",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sasham00re/Sculpture/issues"
